<resources>
    <string name="app_name">Google Login</string>
    <string name="enter_email_ID">Enter your email</string>

    <string name="sign_in">Sign In</string>
    <string name="display_name">Display Name:</string>
    <string name="email_address">:</string>
    <string name="user_id">:</string>
    <string name="profile_info">Profile Information</string>
    <string name="sign_out">Sign Out</string>
    <string name="view_contacts">View Contacts</string>
    <string name="email">Email:</string>
    <string name="user_id_">User ID:</string>
    <string name="client_id">130005812202-ijp4aqdusen2bojmm77c0afmtpgmvj3p.apps.googleusercontent.com</string>
    <string name="client_secret">Mcs7BMd_ZlVYFwCwBzId41yA</string>
    <string name="profile_information">Profile Information</string>
    <string name="sign_out_">Sign Out</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="view_user_contacts">View Contacts</string>
    <string name="contacts">Contacts</string>
</resources>
