<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/info_color">

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/profile_information"
    android:textSize="20sp"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="5dp"
    />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/dark_grey"
        android:layout_marginBottom="5dp"/>
<TextView
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/email"
android:id="@id/emailId"
android:textSize="15sp"
android:layout_marginLeft="15dp"
android:layout_marginBottom="5dp"
    android:paddingTop="15dp"
    />
<TextView
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/user_id_"
android:id="@id/user_id"
android:textSize="15sp"
android:layout_marginLeft="15dp"
android:layout_marginBottom="5dp"
    android:paddingTop="10dp"
    />

<ImageButton
    android:layout_width="30dp"
    android:layout_height="30dp"
    android:id="@+id/img_view_contacts"
    android:src="@drawable/ic_contacts_black_24dp"
    android:layout_gravity="center_horizontal"
    android:layout_marginTop="10dp"
    />

<TextView
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/contacts"
android:id="@+id/label_contacts"
android:layout_marginLeft="10dp"
android:layout_marginBottom="5dp"
    android:layout_marginTop="10dp"

android:textSize="20sp" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/dark_grey"/>
</LinearLayout>