<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.saneef.googleloginauth.LoginActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_info"
        android:id="@+id/textView3"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_out"
        android:id="@+id/sign_out_button"
        android:textAllCaps="false"
        android:onClick="logout"


        android:layout_marginBottom="90dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_contacts"
        android:id="@+id/view_contact"
        android:textAllCaps="false"
        android:visibility="invisible"
        android:layout_alignTop="@+id/sign_out_button"

        />


    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/profile_photo"

        android:src="@drawable/google_logo"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Display Name"
        android:id="@+id/textView"
        android:layout_marginBottom="29dp"
        android:layout_above="@+id/textView2"
        android:layout_alignRight="@+id/view_contact"
        android:layout_alignEnd="@+id/view_contact" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Email"
        android:id="@+id/textView2"
        android:layout_above="@+id/view_contact"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_marginBottom="112dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="User ID"
        android:id="@+id/textView4"
        android:layout_marginTop="32dp"
        android:layout_below="@+id/emailId"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignStart="@+id/textView2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=":"
        android:id="@+id/displayName"
        android:layout_alignTop="@+id/textView"
        android:layout_alignLeft="@+id/emailId"
        android:layout_alignStart="@+id/emailId" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=":"
        android:id="@+id/emailId"
        android:layout_below="@+id/textView"
        android:layout_alignLeft="@+id/sign_out_button"
        android:layout_alignStart="@+id/sign_out_button" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=":"
        android:id="@+id/user_id"
        android:layout_alignBottom="@+id/textView4"
        android:layout_alignLeft="@+id/emailId"
        android:layout_alignStart="@+id/emailId" />


</RelativeLayout>
